--- a/awc-web/awc-carrousel/awc-carrousel-item.html
+++ b/awc-web/awc-carrousel/awc-carrousel-item.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../awc-simple-hero-image/awc-simple-hero-image.html">
 
 <dom-module id="awc-carrousel-item">
