--- a/awc-web/awc-information-card/awc-information-card.html
+++ b/awc-web/awc-information-card/awc-information-card.html
@@ -1,9 +1,9 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="../bower_components/iron-icons/maps-icons.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/maps-icons.html">
+<link rel="import" href="../../bower_components/paper-tooltip/paper-tooltip.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
 <link rel="import" href="../awc-social-buttons/awc-social-buttons.html">
-<link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 
 <dom-module id="awc-information-card">
 
