--- a/awc-web/awc-page-preloading/test.html
+++ b/awc-web/awc-page-preloading/test.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="import" href="awc-page-preloading.html">
 	<link rel="import" href="../materialDesign/materialDesign.html">
-	<script src='../bower_components/webcomponentsjs/webcomponents-lite.min.js'></script>
+	<script src='../../bower_components/webcomponentsjs/webcomponents-lite.min.js'></script>
 	<style>
 		body > div{
 			padding: 20px;
