--- a/awc-web/awc-share-button/awc-share-button.html
+++ b/awc-web/awc-share-button/awc-share-button.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
-<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <script src="dialog-polyfill.js"></script>
 <link rel="stylesheet" type="text/css" href="dialog-polyfill.css" />
