--- a/awc-web/awc-social-buttons/awc-social-buttons.html
+++ b/awc-web/awc-social-buttons/awc-social-buttons.html
@@ -1,7 +1,7 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/paper-button/paper-button.html">
-<link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-tooltip/paper-tooltip.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../awc-responsive-tag/awc-responsive-tag.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
 <link rel="stylesheet" href="styles.css">
