--- a/awc-web/awc-carrousel/test.html
+++ b/awc-web/awc-carrousel/test.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-	<script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+	<script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 	<link rel="import" href="../materialDesign/materialDesign.html">
 	<link rel="import" href="../aux-styles.html">
 	<link rel="import" href="awc-carrousel.html">
