--- a/awc-web/awc-continue-down-button/awc-continue-down-button.html
+++ b/awc-web/awc-continue-down-button/awc-continue-down-button.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 
 <dom-module id="awc-continue-down-button">
 <template>
