--- a/awc-web/awc-facebook-comment/awc-facebook-comment.html
+++ b/awc-web/awc-facebook-comment/awc-facebook-comment.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
 
 <dom-module id="awc-facebook-comment">
