--- a/awc-web/awc-loading-button/awc-loading-button.html
+++ b/awc-web/awc-loading-button/awc-loading-button.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-spinner/paper-spinner-lite.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
-<link rel="import" href="../bower_components/paper-spinner/paper-spinner-lite.html">
 
 
 <dom-module id="awc-loading-button">
