--- a/awc-web/awc-overlay-menu/awc-overlay-menu.html
+++ b/awc-web/awc-overlay-menu/awc-overlay-menu.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-image/iron-image.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
 <link rel="import" href="../awc-simple-hero-image/awc-simple-hero-image.html">
 <link rel="import" href="../materialDesign/materialDesign.html">
 
