--- a/awc-web/awc-parallax-container/test.html
+++ b/awc-web/awc-parallax-container/test.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="import" href="../materialDesign/materialDesign.html">
-	<script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+	<script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 	<link rel="import" href="awc-parallax-container.html">
 	<style>
 		body > div{
