--- a/awc-web/awc-scroll-spy/test.html
+++ b/awc-web/awc-scroll-spy/test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<script type="text/javascript" src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+	<script type="text/javascript" src="../../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 	<link rel="import" href="../materialDesign/materialDesign.html">
 	<link rel="import" href="awc-scroll-spy.html">
 	<style>
