--- a/awc-web/awc-share-button/test.html
+++ b/awc-web/awc-share-button/test.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-	<script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+	<script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 	<link rel="import" href="../materialDesign/materialDesign.html">
 	<link rel="import" href="awc-share-button.html">
 	<style>
