--- a/awc-web/awc-top-menu/test.html
+++ b/awc-web/awc-top-menu/test.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-	<link rel="stylesheet" href="../bower_components/material-design-lite/material.min.css">
+	<link rel="stylesheet" href="../../bower_components/material-design-lite/material.min.css">
 	<script type="text/javascript" src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 	<script type="text/javascript" src="../bower_components/material-design-lite/material.min.js"></script>
 	<link rel="import" href="awc-top-menu.html">
