--- a/awc-web/awc-video-hero/awc-video-hero.html
+++ b/awc-web/awc-video-hero/awc-video-hero.html
@@ -1,5 +1,5 @@
-<link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <!-- VideoJs Dependencies-->
 <link href="http://vjs.zencdn.net/5.10.4/video-js.css" rel="stylesheet">
 <script src="http://vjs.zencdn.net/5.10.4/video.js"></script>
