--- a/awc-web/awc-video-hero/test.html
+++ b/awc-web/awc-video-hero/test.html
@@ -7,7 +7,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="import" href="awc-video-hero.html">
-	<script src='../bower_components/webcomponentsjs/webcomponents-lite.min.js'></script>
+	<script src='../../bower_components/webcomponentsjs/webcomponents-lite.min.js'></script>
     <link rel="import" href="../aux-styles.html">
     <link rel="import" href="../materialDesign/materialDesign.html">
 	<style>
