--- a/awc-web/awc-overlay-menu/awc-overlay-menu.html
+++ b/awc-web/awc-overlay-menu/awc-overlay-menu.html
@@ -41,7 +41,7 @@
 					<template is='dom-if' if='{{!hero}}'>
 						<span class="mdl-layout-title" style='display:table;'>
 							<template is='dom-if' if='{{logo}}'>
-								<iron-image  src="{{logo}}" style="width:40px; height:40px; display:table-cell" sizing='contain'></iron-image>
+								<iron-image  src="{{logo}}" style="width:100%; height: 60px; display:table-cell" sizing='contain'></iron-image>
 							</template>
 							<div style='display:table-cell; padding-left: 6px;'>{{title}}</div>
 						</span>
