--- a/awc-web/awc-top-menu/awc-top-menu.html
+++ b/awc-web/awc-top-menu/awc-top-menu.html
@@ -12,6 +12,7 @@
 	<template>
   		<style is="custom-style">
   			:host{
+  				z-index: 9999;
   				--awc-tm-background: none; 
   				--awc-tm-color: #000000;
 				--awc-tm-bar: #2196f3;
