--- a/awc-web/awc-parallax-container/awc-parallax-container.html
+++ b/awc-web/awc-parallax-container/awc-parallax-container.html
@@ -21,10 +21,13 @@
 				z-index: 1;
 				overflow: hidden;
 		    }
+		    .content{
+		    	z-index: 2;
+		    }
 		    .image{
 		    	position: absolute;
 		    	left: 50%;
-		    	top: -25%;
+		    	top: -15%;
 		    	bottom: 0px;
 		    	min-height: 100%;
 		    	min-width: 100%;
@@ -36,10 +39,10 @@
 		    }
 		</style>
 
+		<content></content>
 		<div class='parallax'>
 			<img class='image' id='image'>
 		</div>
-		<content></content>
 
 	</template>
 	
@@ -126,8 +129,7 @@
 			    		displacement = ( dy - d );
 			    	}
 
-					this.customStyle['--awc-pc-transform'] = 'translate3d(-50%, '+displacement+'px, 0px);';
-					this.updateStyles();
+			    	this.transform( 'translate3d(-50%, '+displacement+'px, 0px)', this.$.image );
 				}
 			}
 		});
